fixed screen responsiveness, added submit to form, fixed horizontal scroll

--- a/index.css
+++ b/index.css
@@ -5,40 +5,40 @@
 	box-sizing: border-box;
 }
 .bgnav{
-	background-color: rgba(76, 87, 96, .3);
+	background-color: rgba(0,0,0, .9);
 }
 
-#gmap{
+/*#gmap_canvas{
 	width: 100%;
     display: block;
     border: none;
     height: 100%;
     border-radius: 10px;
-}
+}*/
 
 #bgcontact {
-  	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(147,168,172,0.2)), url(https://images.pexels.com/photos/1487154/pexels-photo-1487154.jpeg?cs=srgb&dl=pexels-daniel-watson-1487154.jpg&fm=jpg);
+  	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/1487154/pexels-photo-1487154.jpeg?cs=srgb&dl=pexels-daniel-watson-1487154.jpg&fm=jpg);
   	background-repeat: no-repeat;
   	background-attachment: fixed;
   	background-size: cover;
 }
 
 #bggallery {
-  	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(147,168,172,0.2)), url(https://images.pexels.com/photos/358530/pexels-photo-358530.jpeg?cs=srgb&dl=pexels-pixabay-358530.jpg&fm=jpg);
+  	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/358530/pexels-photo-358530.jpeg?cs=srgb&dl=pexels-pixabay-358530.jpg&fm=jpg);
   	background-repeat: no-repeat;
   	background-attachment: fixed;
   	background-size: cover;
 }
 
 #bgskills {
-  	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(147,168,172,0.2)), url(https://images.pexels.com/photos/397905/pexels-photo-397905.jpeg?cs=srgb&dl=pexels-brandon-nickerson-397905.jpg&fm=jpg);
+  	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/397905/pexels-photo-397905.jpeg?cs=srgb&dl=pexels-brandon-nickerson-397905.jpg&fm=jpg);
   	background-repeat: no-repeat;
   	background-attachment: fixed;
   	background-size: cover;
 }
 
 #bghome {
-  	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(147,168,172,0.2)), url(https://images.pexels.com/photos/258160/pexels-photo-258160.jpeg?cs=srgb&dl=pexels-pixabay-258160.jpg&fm=jpg);
+  	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/258160/pexels-photo-258160.jpeg?cs=srgb&dl=pexels-pixabay-258160.jpg&fm=jpg);
   	background-repeat: no-repeat;
   	background-attachment: fixed;
   	background-size: cover;
@@ -82,7 +82,7 @@
 }
 
 .sklbg{
-	background: rgba(0, 0, 0, .4);
+	background: rgba(0, 0, 0, .6);
 }
 
 .ppic{
@@ -95,4 +95,9 @@
 	width: 300px;
 	object-fit: cover;
 	object-position: -5% 30%;
+}
+
+#imgbs
+{
+	max-width: 80%;
 }
